Add mockup/test site disclaimer banner

--- a/index.html
+++ b/index.html
@@ -19,6 +19,11 @@
 
 <body>
 
+    <!-- Mockup Disclaimer Banner -->
+    <div class="mockup-banner">
+        ⚠️ DETTA ÄR EN TESTSIDA / MOCKUP - INGA RIKTIGA BETALNINGAR SKER ⚠️
+    </div>
+
     <header>
         <div class="logo">Hållbar mat Hbg</div>
         <nav>
