feat: Premium redesign with Comic Explosion star badges, improved layout and spacing

--- a/index.html
+++ b/index.html
@@ -21,7 +21,10 @@
 
 <body>
 
-    <div id="app">
+    <div id="app" style="padding-top: 140px;"> <!-- Increased padding for fixed header -->
+        <div class="logo-container">
+            <img src="assets/hallbar-mat-logo.png" alt="Hållbar Mat Logo" class="site-logo">
+        </div>
         <!-- Content will be injected here -->
         <main id="main-content" class="loading">
             Laddar innehåll...
