Fix: restore logo file

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
     <nav class="site-nav">
         <div class="nav-container">
             <div class="brand">
-                <img src="assets/hallbar-mat-logo-transparent.png" alt="Logo" class="nav-logo">
+                <img src="assets/hallbar-mat-logo.png" alt="Logo" class="nav-logo">
                 <span class="brand-text">Hållbar Mat Hbg</span>
             </div>
             <!-- Contact/Social Actions moved to Header -->
