--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
         <div class="nav-container">
             <div class="brand">
                 <img src="assets/hallbar-mat-logo.png" alt="Logo" class="nav-logo">
-                <span class="brand-text">Hållbar Mat Hbg</span>
+                <span class="brand-text">Hållbar Mat</span>
             </div>
             <!-- Contact/Social Actions moved to Header -->
             <div id="nav-actions" class="nav-actions"></div>
